--- a/package.json
+++ b/package.json
@@ -21,11 +21,20 @@
     "react-dom": "16.8.1",
     "react-google-maps": "9.4.5",
     "react-image-gallery": "0.8.12",
-    "react-router-dom": "4.3.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5",
     "react-slick": "0.23.2",
     "react-swipeable-views": "0.13.1",
-    "react-tagsinput": "3.19.0"
+    "react-tagsinput": "3.19.0",
+    "connected-react-router": "^6.3.2",
+    "react-redux": "^7.0.1",
+    "react-router": "^5.0.0",
+    "react-treebeard": "^3.1.0",
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
