--- a/package.json
+++ b/package.json
@@ -10,25 +10,26 @@
     "ajv": "6.9.1",
     "animate.css": "3.7.0",
     "classnames": "2.2.6",
+    "connected-react-router": "^6.3.2",
     "history": "4.7.2",
     "moment": "2.24.0",
     "node-sass": "4.11.0",
     "nouislider": "13.1.0",
     "prop-types": "15.7.1",
+    "query-string": "^6.5.0",
     "react": "16.8.1",
     "react-animate-on-scroll": "2.1.5",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.1",
     "react-google-maps": "9.4.5",
     "react-image-gallery": "0.8.12",
+    "react-redux": "^7.0.1",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5",
     "react-slick": "0.23.2",
     "react-swipeable-views": "0.13.1",
     "react-tagsinput": "3.19.0",
-    "connected-react-router": "^6.3.2",
-    "react-redux": "^7.0.1",
-    "react-router": "^5.0.0",
     "react-treebeard": "^3.1.0",
     "redux": "^4.0.1",
     "redux-devtools": "^3.5.0",
