--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "query-string": "^6.5.0",
     "react": "16.8.1",
     "react-animate-on-scroll": "2.1.5",
+    "react-chat-widget": "^2.1.4-1",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.1",
     "react-google-maps": "9.4.5",
